Add Linear Regression model implementation with feature engineering and evaluation metrics

--- a/models/lasso_regression.ipynb
+++ b/models/lasso_regression.ipynb
@@ -443,12 +443,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e682324f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_lasso = grid_lasso.best_estimator_\n"
+    "best_lasso = grid_lasso.best_estimator_"
    ]
   },
   {
