--- a/models/ridge_ml.ipynb
+++ b/models/ridge_ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "edbfc5d9",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "081f78b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('final_data.csv')\n",
+    "data = pd.read_csv('../final_data.csv')\n",
     "#data = data[:1000]\n",
     "X = data.drop('popularity', axis=1)\n",
     "y = data['popularity']"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "7de39ce1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "67075c50",
    "metadata": {},
    "outputs": [],
@@ -54,9 +54,6 @@
     "def grid_search_ridge(X, y, grid):\n",
     "    X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    X_val_scaled = scaler.transform(X_val)\n",
     "    keys = grid.keys()\n",
     "    values = grid.values()\n",
     "\n",
@@ -65,9 +62,9 @@
     "        params = dict(zip(keys, combo))\n",
     "\n",
     "        model = Ridge(**params)\n",
-    "        model.fit(X_train_scaled, y_train)\n",
+    "        model.fit(X_train, y_train)\n",
     "\n",
-    "        y_pred = model.predict(X_val_scaled)\n",
+    "        y_pred = model.predict(X_val)\n",
     "\n",
     "        r2 = r2_score(y_val, y_pred)\n",
     "        #print(f\"Params: {params}, R2: {r2}\")\n",
@@ -80,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "e4594bf1",
    "metadata": {},
    "outputs": [
@@ -88,26 +85,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train shape: (22684, 39), Test shape: (5672, 39)\n",
+      "Fitting 5 folds for each of 240 candidates, totalling 1200 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\USER\\anaconda\\envs\\mlenv\\Lib\\site-packages\\joblib\\externals\\loky\\process_executor.py:782: UserWarning: A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "\n",
-      "The best parameters are:  {'alpha': 0.1, 'solver': 'sag', 'tol': 0.01, 'max_iter': 7500}\n",
-      "Best R2 score:  0.5870717825998937\n"
+      "Best parameters: {'ridge__alpha': 0.1, 'ridge__max_iter': 1000, 'ridge__solver': 'sag', 'ridge__tol': 0.1}\n",
+      "Best CV R2 score: 0.2222\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
     "X_train1, X_test1, y_train1, y_test1 = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "fe = FeatureEngineer()\n",
-    "X_train = fe.fit_transform(X_train1, y_train1)\n",
-    "X_test = fe.transform(X_test1)\n",
-    "best_params, best_r2 = grid_search_ridge(X_train1, y_train1, grid)\n",
-    "print(\"\\n\\nThe best parameters are: \", best_params)\n",
-    "print(\"Best R2 score: \", best_r2)"
+    "\n",
+    "print(f\"Train shape: {X_train1.shape}, Test shape: {X_test1.shape}\")\n",
+    "\n",
+    "# Create a pipeline to prevent data leakage\n",
+    "pipeline = Pipeline([\n",
+    "    ('feature_eng', FeatureEngineer()),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('ridge', Ridge())\n",
+    "])\n",
+    "\n",
+    "# Update parameter grid for pipeline\n",
+    "param_grid_pipeline = {\n",
+    "    'ridge__alpha': [0.1, 1.0, 10.0, 100.0],\n",
+    "    'ridge__solver': ['sag', 'auto', 'lsqr', 'sparse_cg'],\n",
+    "    'ridge__tol': [1e-3, 1e-2, 1e-1],\n",
+    "    'ridge__max_iter': [1000, 2000, 5000, 7500, 10000]\n",
+    "}\n",
+    "\n",
+    "# GridSearchCV with pipeline\n",
+    "ridge_cv = GridSearchCV(\n",
+    "    pipeline,\n",
+    "    param_grid=param_grid_pipeline,\n",
+    "    cv=5,\n",
+    "    scoring='r2',\n",
+    "    n_jobs=-1,\n",
+    "    verbose=1\n",
+    ")\n",
+    "\n",
+    "ridge_cv.fit(X_train1, y_train1)\n",
+    "\n",
+    "print(\"\\n\\nBest parameters:\", ridge_cv.best_params_)\n",
+    "print(f\"Best CV R2 score: {ridge_cv.best_score_:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "4c2af8f2",
    "metadata": {},
    "outputs": [
@@ -115,19 +157,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 score with best parameters on test set:  0.5968439178629816\n"
+      "\n",
+      "=== Test Set Results ===\n",
+      "R2 Score: 0.2450\n",
+      "MAE: 15.6774\n",
+      "RMSE: 20.6340\n",
+      "\n",
+      "=== Comparison ===\n",
+      "CV R2:   0.2222\n",
+      "Test R2: 0.2450\n",
+      "Difference: 0.0228\n",
+      "✓ Good - CV and Test scores are similar!\n"
      ]
     }
    ],
    "source": [
-    "model = Ridge(**best_params)\n",
-    "scaler = StandardScaler()\n",
-    "X_train1_scaled = scaler.fit_transform(X_train1)\n",
-    "X_test1_scaled = scaler.transform(X_test1)\n",
-    "model.fit(X_train1_scaled, y_train1)\n",
-    "y_pred = model.predict(X_test1_scaled)\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
+    "import numpy as np\n",
+    "\n",
+    "# Test the best model\n",
+    "y_pred = ridge_cv.predict(X_test1)\n",
+    "\n",
     "r2 = r2_score(y_test1, y_pred)\n",
-    "print(\"R2 score with best parameters on test set: \", r2)\n"
+    "mae = mean_absolute_error(y_test1, y_pred)\n",
+    "rmse = np.sqrt(mean_squared_error(y_test1, y_pred))\n",
+    "\n",
+    "print(\"\\n=== Test Set Results ===\")\n",
+    "print(f\"R2 Score: {r2:.4f}\")\n",
+    "print(f\"MAE: {mae:.4f}\")\n",
+    "print(f\"RMSE: {rmse:.4f}\")\n",
+    "\n",
+    "print(f\"\\n=== Comparison ===\")\n",
+    "print(f\"CV R2:   {ridge_cv.best_score_:.4f}\")\n",
+    "print(f\"Test R2: {r2:.4f}\")\n",
+    "print(f\"Difference: {abs(ridge_cv.best_score_ - r2):.4f}\")\n",
+    "\n",
+    "if abs(ridge_cv.best_score_ - r2) < 0.05:\n",
+    "    print(\"✓ Good - CV and Test scores are similar!\")\n",
+    "else:\n",
+    "    print(\"⚠ Warning - Large gap suggests overfitting\")"
    ]
   }
  ],
