Refactor Ridge regression model notebook: streamline grid search, enhance output reporting, and add new exploratory notebook

--- a/models/lineer.ipynb
+++ b/models/lineer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "6e8eef5f",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "3b4dd2fb",
    "metadata": {},
    "outputs": [
@@ -28,23 +28,14 @@
      "text": [
       "Index(['danceability', 'energy', 'loudness', 'mode', 'speechiness',\n",
       "       'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo',\n",
-      "       'duration_ms', 'playlist_count', 'subgenre_album rock',\n",
-      "       'subgenre_big room', 'subgenre_classic rock', 'subgenre_dance pop',\n",
-      "       'subgenre_electro house', 'subgenre_electropop',\n",
-      "       'subgenre_gangster rap', 'subgenre_hard rock', 'subgenre_hip hop',\n",
-      "       'subgenre_hip pop', 'subgenre_indie poptimism',\n",
-      "       'subgenre_latin hip hop', 'subgenre_latin pop', 'subgenre_neo soul',\n",
-      "       'subgenre_new jack swing', 'subgenre_permanent wave',\n",
-      "       'subgenre_pop edm', 'subgenre_post-teen pop',\n",
-      "       'subgenre_progressive electro house', 'subgenre_reggaeton',\n",
-      "       'subgenre_southern hip hop', 'subgenre_trap', 'subgenre_tropical',\n",
-      "       'subgenre_urban contemporary', 'album_age_log', 'playlist_count_final',\n",
-      "       'artist_avg_popularity', 'artist_high_pop_ratio',\n",
-      "       'artist_song_count_bin'],\n",
+      "       'duration_ms', 'playlist_count', 'album_age_log',\n",
+      "       'playlist_count_final', 'artist_avg_popularity',\n",
+      "       'artist_high_pop_ratio', 'artist_song_count_bin',\n",
+      "       'avg_subgenre_popularity'],\n",
       "      dtype='object')\n",
-      "Eğitim seti boyutu: (22684, 41)\n",
-      "Test seti boyutu: (5672, 41)\n",
-      "Özellik sayısı: 41\n"
+      "Eğitim seti boyutu: (22684, 18)\n",
+      "Test seti boyutu: (5672, 18)\n",
+      "Özellik sayısı: 18\n"
      ]
     }
    ],
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "cdb44380",
    "metadata": {},
    "outputs": [
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6ba78168",
    "metadata": {},
    "outputs": [
@@ -122,12 +113,15 @@
       "==================================================\n",
       "LINEAR REGRESSION MODEL PERFORMANCE\n",
       "==================================================\n",
-      "Training R² Score: 0.5966\n",
-      "Test R² Score: 0.2563\n",
-      "Test MSE: 413.8249\n",
-      "Test RMSE: 20.3427\n",
-      "Test MAE: 15.5858\n",
-      "==================================================\n"
+      "Training R² Score: 0.5938\n",
+      "Test R² Score: 0.2518\n",
+      "Test MSE: 416.3371\n",
+      "Test RMSE: 20.4043\n",
+      "Test MAE: 15.6057\n",
+      "==================================================\n",
+      "⚠️ WARNING: Overfitting detected!\n",
+      "   Train-Test gap: 0.3420\n",
+      "   Consider using regularization (Ridge/Lasso) or Pipeline with CV\n"
      ]
     }
    ],
@@ -173,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "0c31f7a5",
    "metadata": {},
    "outputs": [
@@ -184,13 +178,13 @@
       "============================================================\n",
       "LINEAR REGRESSION WITH PIPELINE (Data Leakage Prevented)\n",
       "============================================================\n",
-      "CV R² Scores: [0.245393   0.22317561 0.20234515 0.22938373 0.21332576]\n",
-      "Mean CV R² Score: 0.2227 (+/- 0.0291)\n",
-      "Test R² Score: 0.2563\n",
-      "Test MAE: 15.5858\n",
-      "Test RMSE: 20.3427\n",
+      "CV R² Scores: [0.24147741 0.21889811 0.19853532 0.22441807 0.20871684]\n",
+      "Mean CV R² Score: 0.2184 (+/- 0.0291)\n",
+      "Test R² Score: 0.2518\n",
+      "Test MAE: 15.6057\n",
+      "Test RMSE: 20.4043\n",
       "============================================================\n",
-      "✓ Excellent: CV-Test gap is small (0.0336)\n",
+      "✓ Excellent: CV-Test gap is small (0.0334)\n",
       "  No significant overfitting detected!\n"
      ]
     }
