--- a/models/nn.ipynb
+++ b/models/nn.ipynb
@@ -24,7 +24,22 @@
     "RANDOM_STATE = 24\n",
     "np.random.seed(RANDOM_STATE)\n",
     "tf.random.set_seed(RANDOM_STATE)\n",
-    "from EngineerFeature import FeatureEngineer"
+    "from EngineerFeature import FeatureEngineer\n",
+    "from sklearn.discriminant_analysis import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf52c34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    ('feature_eng', FeatureEngineer()),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "])"
    ]
   },
   {
@@ -46,12 +61,12 @@
    ],
    "source": [
     "df = pd.read_csv(\"../final_data.csv\")\n",
-    "df = df[:2000]"
+    "df = df[:1000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "33a63344",
    "metadata": {},
    "outputs": [
@@ -66,14 +81,12 @@
    ],
    "source": [
     "X = df.drop(\"popularity\", axis=1)\n",
-    "y = df[\"popularity\"]\n",
-    "print(\"Features shape:\", X.shape)\n",
-    "print(\"Target shape:\", y.shape)"
+    "y = df[\"popularity\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "a6ff082b",
    "metadata": {},
    "outputs": [
@@ -101,6 +114,19 @@
     "fe = FeatureEngineer()\n",
     "X_temp = fe.fit_transform(X_temp, y_temp)\n",
     "X_test = fe.transform(X_test)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "cols = X_temp.columns\n",
+    "X_temp = pd.DataFrame(\n",
+    "    scaler.fit_transform(X_temp[cols]),\n",
+    "    columns=cols,\n",
+    "    index=X_temp.index\n",
+    ")\n",
+    "X_test = pd.DataFrame(\n",
+    "    scaler.transform(X_test[cols]),\n",
+    "    columns=cols,\n",
+    "    index=X_test.index\n",
+    ")\n",
     "\n",
     "# Train ve Validation'ı ayır\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
