Refactor Ridge Regression Model and Remove Unused Notebook
- Updated execution counts in the ridge_ml.ipynb notebook to reflect the latest run order.
- Modified the parameter grid for GridSearchCV in the Ridge regression model to include higher alpha values for stronger regularization.
- Improved output messages to provide clearer results from the model fitting process.
- Deleted the try.ipynb notebook as it was no longer needed.

--- a/models/lineer.ipynb
+++ b/models/lineer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6e8eef5f",
    "metadata": {},
    "outputs": [],
@@ -10,77 +10,33 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from EngineerFeature import FeatureEngineer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "3b4dd2fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['danceability', 'energy', 'loudness', 'mode', 'speechiness',\n",
-      "       'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo',\n",
-      "       'duration_ms', 'playlist_count', 'album_age_log',\n",
-      "       'playlist_count_final', 'artist_avg_popularity',\n",
-      "       'artist_high_pop_ratio', 'artist_song_count_bin',\n",
-      "       'avg_subgenre_popularity'],\n",
-      "      dtype='object')\n",
-      "Eğitim seti boyutu: (22684, 18)\n",
-      "Test seti boyutu: (5672, 18)\n",
-      "Özellik sayısı: 18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Veri setini yükle\n",
-    "from sklearn.discriminant_analysis import StandardScaler\n",
-    "scaler = StandardScaler()\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "data = pd.read_csv('../final_data.csv')\n",
-    "#data = data.drop(columns=['artist'])\n",
+    "\n",
     "# Özellikler ve hedef değişkeni ayır\n",
     "X = data.drop(\"popularity\", axis=1)\n",
     "y = data[\"popularity\"]\n",
     "\n",
     "# Eğitim ve test setlerine ayır (%80 eğitim, %20 test)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=24)\n",
-    "\n",
-    "# Feature Engineering uygula\n",
-    "fe = FeatureEngineer()\n",
-    "X_train = fe.fit_transform(X_train, y_train)\n",
-    "X_test = fe.transform(X_test)\n",
-    "#X_train.drop('artist_song_count', axis=1, inplace=True)\n",
-    "#X_test.drop('artist_song_count', axis=1, inplace=True)\n",
-    "print(X_train.columns)\n",
-    "# Scaling uygula\n",
-    "cols = X_train.columns#.difference([''])#, 'artist_song_count'])\n",
-    "X_train = pd.DataFrame(\n",
-    "    scaler.fit_transform(X_train[cols]),\n",
-    "    columns=cols,#X_train.columns,\n",
-    "    index=X_train.index\n",
-    ")\n",
-    "X_test = pd.DataFrame(\n",
-    "    scaler.transform(X_test[cols]),\n",
-    "    columns=cols,#X_test.columns,\n",
-    "    index=X_test.index\n",
-    ")\n",
-    "\n",
-    "print(f\"Eğitim seti boyutu: {X_train.shape}\")\n",
-    "print(f\"Test seti boyutu: {X_test.shape}\")\n",
-    "print(f\"Özellik sayısı: {X_train.shape[1]}\")"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=24)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "cdb44380",
    "metadata": {},
    "outputs": [
@@ -88,86 +44,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model trained successfully!\n"
+      "Model trained successfully with Pipeline!\n",
+      "Özellik sayısı (after feature engineering): 18\n"
      ]
     }
    ],
    "source": [
-    "# Train Linear Regression model\n",
-    "model = LinearRegression()\n",
-    "model.fit(X_train, y_train)\n",
+    "# Pipeline oluştur (Data Leakage önlenir)\n",
+    "pipeline = Pipeline([\n",
+    "    ('feature_eng', FeatureEngineer()),\n",
+    "    ('scaler', StandardScaler()),\n",
+    "    ('regressor', LinearRegression())\n",
+    "])\n",
     "\n",
-    "print(\"Model trained successfully!\")"
+    "# Pipeline'ı eğit\n",
+    "pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Model trained successfully with Pipeline!\")\n",
+    "print(f\"Özellik sayısı (after feature engineering): {pipeline.named_steps['feature_eng'].transform(X_train.iloc[:1]).shape[1]}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6ba78168",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "==================================================\n",
-      "LINEAR REGRESSION MODEL PERFORMANCE\n",
-      "==================================================\n",
-      "Training R² Score: 0.5938\n",
-      "Test R² Score: 0.2518\n",
-      "Test MSE: 416.3371\n",
-      "Test RMSE: 20.4043\n",
-      "Test MAE: 15.6057\n",
-      "==================================================\n",
-      "⚠️ WARNING: Overfitting detected!\n",
-      "   Train-Test gap: 0.3420\n",
-      "   Consider using regularization (Ridge/Lasso) or Pipeline with CV\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Make predictions\n",
-    "y_train_pred = model.predict(X_train)\n",
-    "y_test_pred = model.predict(X_test)\n",
-    "\n",
-    "# Evaluate the model\n",
-    "train_r2 = r2_score(y_train, y_train_pred)\n",
-    "test_r2 = r2_score(y_test, y_test_pred)\n",
-    "test_mse = mean_squared_error(y_test, y_test_pred)\n",
-    "test_rmse = np.sqrt(test_mse)\n",
-    "test_mae = mean_absolute_error(y_test, y_test_pred)\n",
-    "\n",
-    "print(\"=\" * 50)\n",
-    "print(\"LINEAR REGRESSION MODEL PERFORMANCE\")\n",
-    "print(\"=\" * 50)\n",
-    "print(f\"Training R² Score: {train_r2:.4f}\")\n",
-    "print(f\"Test R² Score: {test_r2:.4f}\")\n",
-    "print(f\"Test MSE: {test_mse:.4f}\")\n",
-    "print(f\"Test RMSE: {test_rmse:.4f}\")\n",
-    "print(f\"Test MAE: {test_mae:.4f}\")\n",
-    "print(\"=\" * 50)\n",
-    "\n",
-    "# Check overfitting\n",
-    "overfitting_gap = train_r2 - test_r2\n",
-    "if overfitting_gap > 0.05:\n",
-    "    print(f\"⚠️ WARNING: Overfitting detected!\")\n",
-    "    print(f\"   Train-Test gap: {overfitting_gap:.4f}\")\n",
-    "    print(f\"   Consider using regularization (Ridge/Lasso) or Pipeline with CV\")\n",
-    "else:\n",
-    "    print(f\"✓ Good: Train-Test gap is acceptable ({overfitting_gap:.4f})\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "53156b40",
-   "metadata": {},
-   "source": [
-    "## Cross-Validation ile Daha Güvenilir Değerlendirme"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "0c31f7a5",
    "metadata": {},
    "outputs": [
@@ -176,69 +75,30 @@
      "output_type": "stream",
      "text": [
       "============================================================\n",
-      "LINEAR REGRESSION WITH PIPELINE (Data Leakage Prevented)\n",
+      "CROSS-VALIDATION RESULTS\n",
       "============================================================\n",
       "CV R² Scores: [0.24147741 0.21889811 0.19853532 0.22441807 0.20871684]\n",
       "Mean CV R² Score: 0.2184 (+/- 0.0291)\n",
-      "Test R² Score: 0.2518\n",
-      "Test MAE: 15.6057\n",
-      "Test RMSE: 20.4043\n",
-      "============================================================\n",
-      "✓ Excellent: CV-Test gap is small (0.0334)\n",
-      "  No significant overfitting detected!\n"
+      "Test R² Score: 0.2518\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "# Pipeline ile data leakage'ı önle\n",
-    "pipeline = Pipeline([\n",
-    "    ('feature_eng', FeatureEngineer()),\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('regressor', LinearRegression())\n",
-    "])\n",
-    "\n",
-    "# Yeni train-test split (pipeline için raw data kullan)\n",
-    "X_raw = data.drop(\"popularity\", axis=1)\n",
-    "y_raw = data[\"popularity\"]\n",
-    "X_train_raw, X_test_raw, y_train_raw, y_test_raw = train_test_split(\n",
-    "    X_raw, y_raw, test_size=0.2, random_state=24\n",
-    ")\n",
+    "# Cross-Validation ile daha güvenilir değerlendirme\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "# 5-fold cross-validation\n",
     "cv_scores = cross_val_score(\n",
-    "    pipeline, X_train_raw, y_train_raw, \n",
+    "    pipeline, X_train, y_train, \n",
     "    cv=5, scoring='r2', n_jobs=-1\n",
     ")\n",
     "\n",
-    "# Pipeline'ı eğit\n",
-    "pipeline.fit(X_train_raw, y_train_raw)\n",
-    "\n",
-    "# Test seti performansı\n",
-    "y_test_pred_cv = pipeline.predict(X_test_raw)\n",
-    "test_r2_cv = r2_score(y_test_raw, y_test_pred_cv)\n",
-    "test_mae_cv = mean_absolute_error(y_test_raw, y_test_pred_cv)\n",
-    "test_rmse_cv = np.sqrt(mean_squared_error(y_test_raw, y_test_pred_cv))\n",
-    "\n",
     "print(\"=\" * 60)\n",
-    "print(\"LINEAR REGRESSION WITH PIPELINE (Data Leakage Prevented)\")\n",
+    "print(\"CROSS-VALIDATION RESULTS\")\n",
     "print(\"=\" * 60)\n",
     "print(f\"CV R² Scores: {cv_scores}\")\n",
     "print(f\"Mean CV R² Score: {cv_scores.mean():.4f} (+/- {cv_scores.std() * 2:.4f})\")\n",
-    "print(f\"Test R² Score: {test_r2_cv:.4f}\")\n",
-    "print(f\"Test MAE: {test_mae_cv:.4f}\")\n",
-    "print(f\"Test RMSE: {test_rmse_cv:.4f}\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "cv_test_gap = abs(cv_scores.mean() - test_r2_cv)\n",
-    "if cv_test_gap < 0.05:\n",
-    "    print(f\"✓ Excellent: CV-Test gap is small ({cv_test_gap:.4f})\")\n",
-    "    print(\"  No significant overfitting detected!\")\n",
-    "else:\n",
-    "    print(f\"⚠️ CV-Test gap: {cv_test_gap:.4f}\")\n",
-    "    print(\"  Consider using Ridge/Lasso regularization\")"
+    "print(f\"Test R² Score: {test_r2:.4f}\")"
    ]
   }
  ],
